--- a/docs/hotspot-makers/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/hotspot-makers/become-a-maker/hotspot-integration-testing.mdx
@@ -130,7 +130,7 @@ To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onbo
 
 - [View the example in the Maker Starter App](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L6)
 - [View the example the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8)
-- [Read more about BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services).
+- [Read more about BLE Services](/hotspot-makers/become-a-maker/hotspot-ble-services).
 
 # Constructing the Add Gateway Transaction
 
@@ -220,8 +220,7 @@ Maker IDs are sequential and cannot be customized.
 
 ## Funding the Maker Account
 
-[Read the guide](/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet) for more
-information.
+[Read the guide](/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet) for more information.
 
 ## Adding Hotspots to the Onboarding Server
 
