post migration api information

--- a/docs/api/blockchain/chain-variables.mdx
+++ b/docs/api/blockchain/chain-variables.mdx
@@ -6,7 +6,6 @@ sidebar_label: Chain Variables
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/chain-variables
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,14 +14,22 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
 
 :::
 
-## Get Chain Variables [DEPRECATED]
+## Deprecated Endpoints
+
+### Get Chain Variables
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/vars
@@ -151,7 +158,13 @@ Gets the current set of chain variables
 
 ---
 
-## Get the value of a chain variable [DEPRECATED]
+### Get the value of a chain variable
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/vars/:name
@@ -189,7 +202,13 @@ This fetched the `block_time` chain variable
 
 ---
 
-## List chain variable activity [DEPRECATED]
+### List chain variable activity
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/vars/activity
