--- a/docs/api/blockchain/elections.mdx
+++ b/docs/api/blockchain/elections.mdx
@@ -6,7 +6,6 @@ sidebar_label: Elections
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/elections
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,14 +14,22 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
 
 :::
 
-## List Elections [DEPRECATED]
+## Deprecated Endpoints
+
+### List Elections
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 Lists elections by listing `consensus group` transactions.
 
