--- a/docs/api/blockchain/ouis.mdx
+++ b/docs/api/blockchain/ouis.mdx
@@ -6,7 +6,6 @@ sidebar_label: OUIs
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/ouis
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,7 +14,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
@@ -30,7 +29,15 @@ the device data to registered router.
 
 ---
 
-## List OUIs [DEPRECATED]
+## Deprecated Endpoints
+
+### List OUIs
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/ouis
@@ -160,7 +167,13 @@ _Query Parameters_
 
 ---
 
-## Get an OUI [DEPRECATED]
+### Get an OUI
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/ouis/:oui
@@ -204,7 +217,13 @@ _No Parameters_
 
 ---
 
-## Get last assigned OUI [DEPRECATED]
+### Get last assigned OUI
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/ouis/last
@@ -248,7 +267,13 @@ _No Parameters_
 
 ---
 
-## Get OUI Stats [DEPRECATED]
+### Get OUI Stats
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/ouis/stats
