--- a/docs/api/blockchain/assert-locations.mdx
+++ b/docs/api/blockchain/assert-locations.mdx
@@ -6,7 +6,6 @@ sidebar_label: Assert Locations
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/assert-locations
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,14 +14,27 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
 
 :::
 
-## List Assert Locations [DEPRECATED]
+## Available on the Oracles API
+
+### List Assert Locations
+
+:::tip Available on the Oracles API
+
+The data provided by endpoint is available using the Oracles API and requires parsing S3 data. More
+information will be made available in the future.
+
+Filter all transactions for the
+[Helium Entity Manager Program](https://github.com/helium/helium-program-library/tree/master/programs/helium-entity-manager)
+by assert location transactions.
+
+:::
 
 ```
 GET https://api.helium.io/v1/assert_locations
