--- a/docs/api/blockchain/cities.mdx
+++ b/docs/api/blockchain/cities.mdx
@@ -6,7 +6,6 @@ sidebar_label: Cities
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/cities
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,21 +14,22 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
 
 :::
 
-# Cities [DEPRECATED]
+## Deprecated Endpoints
 
-Hotspots are usually clustered in and around cities. The routes in this section help list all cities
-with their hotspot counts, or list all hotspots for a specific city
+### List Hotspot Cities
 
----
+:::caution This Endpoint Is Deprecated
 
-## List Hotspot Cities [DEPRECATED]
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/cities
@@ -80,7 +80,13 @@ Lists cities including the word houston in their city, state or country.
 
 ---
 
-## City for City ID [DEPRECATED]
+### City for City ID
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/cities/:city_id
@@ -129,7 +135,13 @@ City for id `dG9yb250b29udGFyaW9jYW5hZGE`
 
 ---
 
-## List Hotspots for a City [DEPRECATED]
+### List Hotspots for a City
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/cities/:city_id/hotspots
