--- a/docs/api/blockchain/dc-burns.mdx
+++ b/docs/api/blockchain/dc-burns.mdx
@@ -6,7 +6,6 @@ sidebar_label: DC Burns
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/dc-burns
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,14 +14,23 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
 
 :::
 
-## DC Burn Totals [DEPRECATED]
+## Available on the Solana API
+
+### DC Burn Totals
+
+:::info Available on the Solana API
+
+The data provided by endpoint is available using the Solana API. More information will be made
+available in the future.
+
+:::
 
 ```
 GET https://api.helium.io/v1/dc_burns/sum
@@ -108,7 +116,14 @@ Remember that transaction units are in `bones`. Read more
 
 ---
 
-## DC Burn Stats [DEPRECATED]
+### DC Burn Stats
+
+:::info Available on the Solana API
+
+The data provided by endpoint is available using the Solana API. More information will be made
+available in the future.
+
+:::
 
 ```
 GET https://api.helium.io/v1/dc_burns/stats
@@ -175,7 +190,14 @@ Remember that transaction units are in `bones`. Read more
 
 ---
 
-## DC Burn Events [DEPRECATED]
+### DC Burn Events
+
+:::info Available on the Solana API
+
+The data provided by endpoint is available using the Solana API. More information will be made
+available in the future.
+
+:::
 
 ```
 GET https://api.helium.io/v1/dc_burns
