--- a/docs/api/blockchain/locations.mdx
+++ b/docs/api/blockchain/locations.mdx
@@ -6,7 +6,6 @@ sidebar_label: Locations
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/locations
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,7 +14,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
@@ -27,7 +26,15 @@ exposes this geographic information.
 
 ---
 
-## Get Location [DEPRECATED]
+## Deprecated Endpoints
+
+### Get Location
+
+:::caution This Endpoint Is Deprecated
+
+This endpoint is deprecated.
+
+:::
 
 ```
 GET https://api.helium.io/v1/locations/:location
