--- a/docs/api/blockchain/rewards.mdx
+++ b/docs/api/blockchain/rewards.mdx
@@ -6,7 +6,6 @@ sidebar_label: Rewards
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /api/blockchain/rewards
-hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
@@ -15,14 +14,23 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Deprecation Incoming
 
-With the Solana Migration, these API endpoints will no longer be available.
+With the Solana Migration, these API endpoints may no longer be available.
 
 Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
 information on accessing data.
 
 :::
 
-## Reward Totals [DEPRECATED]
+## Available on the Oracles API
+
+### Reward Totals
+
+:::tip Available on the Oracles API
+
+The data provided by endpoint is available using the Oracles API and requires parsing S3 data. More
+information will be made available in the future.
+
+:::
 
 ```
 GET https://api.helium.io/v1/rewards/sum
