--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -121,12 +121,12 @@ offers multi-tenant and private instances to businesses and individuals.
   Helium ecosystem, providing pre-provisioned products, demonstrating Class C device functionality,
   and assisting clients in bringing their solutions to market. Parley Labs' services include
   sourcing, procurement, provisioning, logistics, integrations, and engineering.
-- [Brdot][brdot] emerged in 2021 as the ultimate solution provider for Helium across Latin America 
-  and has since then been offering comprehensive services and coverage as a reseller for the finest 
-  Helium gateways available, certified by Anatel. Our expertise brings users an extensive range of 
-  offerings, including LNS services, device hosting options, and unparalleled support. Whether you 
-  require private or public LNS service utilizing a pay-per-message or pay-per-month basis, 
-  BrDot has you covered.
+- [Brdot][brdot] emerged in 2021 as the ultimate solution provider for Helium across Latin America
+  and has since then been offering comprehensive services and coverage as a reseller for the finest
+  Helium gateways available, certified by Anatel. Our expertise brings users an extensive range of
+  offerings, including LNS services, device hosting options, and unparalleled support. Whether you
+  require private or public LNS service utilizing a pay-per-message or pay-per-month basis, BrDot
+  has you covered.
 
 [chirpstack]: https://www.chirpstack.io/
 [ingeniousthings]: https://www.ingeniousthings.fr/
