--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -77,6 +77,11 @@ Makers can use the Helium Wallet app to swap HNT directly to DC.
 This method requires that the Maker Wallet is already funded with HNT to swap and SOL for
 transaction fees.
 
+:::warning HNT to DC swaps are irreversible
+
+Do not use this method if you want to fund a different wallet with DC
+
+:::
 Swap HNT to DC within a Maker Wallet:
 
 1. Select the Maker Wallet in the Helium Wallet app.
@@ -100,19 +105,20 @@ DC.
 This method requires that the sending Wallet is already funded with HNT to swap and SOL for
 transaction fees.
 
-Add the Maker Wallet address to the Address Book:
+Add the Maker Wallet address to the Address Book as a contact. This is the destination wallet 
+that you will send the DC to:
 
 1. Tap the `Address Book` icon in the top right corner of the Helium Wallet app.
 1. Add new contact with the Maker's Solana wallet address.
 
-Swap HNT to DC to a Maker Wallet:
+Swap HNT to DC to send to a Maker Wallet:
 
 1. Select any Wallet in the Helium Wallet app.
 1. Tap the `$` icon on the bottom tab bar.
 1. Tap the `Swap` icon in the middle of the screen.
 1. Select `HNT` in the top drop-down and enter an amount of HNT to swap.
 1. The lower drop-down will be filled with the resulting DC amount.
-1. Tap the grey `Add Recipient +` text to enter the receiving Solana wallet address.
+1. **Tap the grey `Add Recipient +` text to enter the receiving Solana wallet address. This is the wallet address to send the DC to.**
 1. Tap the `...` to the right of Solana Address and select the contact for the Maker Wallet.
 1. Tap the `Swap Tokens` button and confirm the swap transaction.
 1. HNT is burned for DC within the same Wallet.
