updated email address

--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -55,7 +55,8 @@ of DCs based on how the fields get filled and change the transaction size.
 
 :::info Current Process
 
-Please contact [hello@helium.com](mailto:hello@helium.com) to purchase an OUI.
+Please send an email to [hello@helium.foundation](mailto:hello@helium.foundation) to purchase an
+OUI.
 
 :::
 
