line wraps and minor editorial

--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -66,7 +66,10 @@ Helium Wallet app before committing the transaction.
 
 :::warning HNT to DC swaps are irreversible
 
-Data Credits cannot be refunded, exchanged for other tokens, or transferred between wallets. Operations should be first tested with a small test amount. Always double-check the addresses before performing essential operations.
+Data Credits cannot be refunded, exchanged for other tokens, or transferred between wallets.
+
+Operations should be first tested with a small test amount. Always double-check the addresses before
+performing essential operations.
 
 :::
 
