--- a/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -30,10 +30,10 @@ Hotspots you manufacture and distribute. In turn, the Helium Foundation adds the
 server. When a Hotspot is onboarded by your end customer, the onboarding server knows to associate
 it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's
 present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the
-blockchain will add the Hotspot. And if you've
-[integrated your Hotspot in the Hotspot App onboarding flow](/hotspot-makers/become-a-maker/hotspot-integration-testing),
-the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be
-used for the transactions with your wallet address as the payer.
+blockchain will add the Hotspot. And if you've integrated your Hotspot in the Hotspot App
+[onboarding flow](/hotspot-makers/become-a-maker/hotspot-integration-testing), the Wallet knows to
+use your approved Maker Wallet address. At this point, the Data Credits will be used for the
+transactions with your wallet address as the payer.
 
 ## Hotspot Data Credit Fees
 
@@ -72,16 +72,17 @@ fail but it allows you to smoke test the onboarding steps. Here is that address:
 
 :::warning
 
-Once you burn HNT to a specified wallet address, they are lost and gone forever. The resulting DCs
-are non-transferable. Please double-check any wallet address before executing any HNT burn. Test large transactions with a small trial amount beforehand.
+Once you burn HNT to a specified wallet address, they are burned forever. The resulting DC are
+non-transferable. Please double-check any wallet address before executing any HNT burn. Test large
+transactions with a small trial amount beforehand.
 
 :::
 
-The actual mechanism for burning HNT to DCs is via an on-chain burn transaction
-[using the Helium Wallet app](/wallets/helium-wallet-app). Follow the
-instructions to download and install the Helium Wallet on your device. Once installed, you'll
-[use the `Swap` tool to supply data credits to your specified maker wallet, which should be 
-specified as the Recipient wallet.](/hotspot-makers/become-a-maker/funding-a-maker-account)
+The actual mechanism for burning HNT to DCs is via an on-chain burn transaction using the
+[Helium Wallet app](/wallets/helium-wallet-app). Follow the instructions to download and install the
+Helium Wallet on your device. Once installed, you'll
+[use the `Swap` tool](/hotspot-makers/become-a-maker/funding-a-maker-account) to supply data credits
+to your specified maker wallet, which should be specified as the Recipient wallet.
 
 :::warning
 
