--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -12,23 +12,19 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('/img/blockchain/iot_header.png')} />
 
-IOT is the protocol token of the [Helium IoT Network](/lorawan-on-helium). IOT was introduced to the
-Helium Network through the community proposal
-[HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md) and is further defined in
-subsequent HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>)</sup>. The first IOT tokens were minted
-following the Solana migration on April 18, 2023.
+IOT is the protocol token of the [Helium IoT Network][iot-network]. IOT was introduced to the Helium
+Network through the community proposal [HIP-52][hip-52] and is further defined in subsequent
+HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>)</sup>. The first IOT tokens were minted following the
+Solana migration on April 18, 2023.
 
-[^1]:
-    [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
-
-[^2]: [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
+[^1]: [HIP-70: Scaling the Helium Network][hip-70]
+[^2]: [HIP-77: Solana Parameters][hip-77]
 
 The IOT token is mined by LoRaWAN Hotspots through both data transfer proceeds as well as Proof of
 Coverage.
 
-The mint address for IOT is
-[`iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns`](https://explorer.solana.com/address/iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns)
-on the Solana blockchain.
+The mint address for IOT is [`iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns`][iot-mint-address] on the
+Solana blockchain.
 
 ## Redemption for HNT
 
@@ -37,9 +33,9 @@ network within the Helium Network is allocated a pool of HNT based on the Networ
 redemption ratio is set algorithmically by the treasury swap contacts based on this Network Utility
 Score.
 
-The [Helium Wallet App](/wallets/helium-wallet-app) serves as the primary platform for exchanging
-IOT to HNT. This transaction can also be performed directly through the Solana blockchain using the
-open source tooling found in the [Helium GitHub repositories](https://github.com/helium).
+The [Helium Wallet App][wallet-app] serves as the primary platform for exchanging IOT to HNT. This
+transaction can also be performed directly through the Solana blockchain using the open source
+tooling found in the [Helium GitHub repositories][github].
 
 ## Token Allocation
 
@@ -49,10 +45,8 @@ Year 1 for IOT started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emission schedule was created in
-[HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve) and confirmed in
-[HIP-77](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules) and
-is as follows:
+The emission schedule was created in [HIP-52](hip-52-emmisions) and confirmed in
+[HIP-77][hip-77-emmisions] and is as follows:
 
 | Year | IOT at Year Start | IOT Minted | Proof of Coverage <sup>(</sup>[^3]<sup>)</sup> | Data Transfer <sup>(</sup>[^3]<sup>)</sup> | Oracles <sup>(</sup>[^4]<sup>)</sup> | Operations Fund | veHNT Stakes |
 | ---- | ----------------- | ---------- | ---------------------------------------------- | ------------------------------------------ | ------------------------------------ | --------------- | ------------ |
@@ -64,8 +58,21 @@ is as follows:
 | 6    | 167.5B            | 8.125B     | 22.5%                                          | 57.5%                                      | 7%                                   | 7%              | 6%           |
 | 7    | 175.625B          | 8.125B     | 21%                                            | 59%                                        | 7%                                   | 7%              | 6%           |
 
-> Full token emissions can be viewed in the IOT section of this document:
-> [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
+> Full token emissions can be viewed in the IOT section of the
+> [Token Emissions as of Solana Migration](migration-emissions) document.
 
 [^3]: Any IOT not rewarded for data transfer is rolled into Proof of Coverage.
 [^4]: Oracles are not rewarded until additional oracle operators deploy services.
+
+[github]: https://github.com/helium
+[hip-52-emmisions]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve
+[hip-52]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md
+[hip-70]: https://github.com/helium/HIP/blob/main/0070-scaling-helium.md
+[hip-77-emmisions]:
+  https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules
+[hip-77]: https://github.com/helium/HIP/blob/main/0077-solana-parameters.md
+[iot-mint-address]: https://explorer.solana.com/address/iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns
+[iot-network]: /lorawan-on-helium
+[migration-emissions]:
+  https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf
+[wallet-app]: /wallets/helium-wallet-app
