--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -18,9 +18,7 @@ Data Credits have been delegated they cannot be redelegated. Data Credits are no
 created.
 
 For further reading on Data Credits and their place in the overall token mechanics of the Helium
-network, refer to the
-[burn and mint economics](/helium-tokens/hnt/#data-credits-and-burn-and-mint-economics) in the HNT
-token documentation.
+network, refer to the [burn and mint economics][bme] in the HNT token documentation.
 
 ## Data Credit Usage
 
@@ -96,8 +94,8 @@ fees.
 | DevAddr           | $100 ($800) \*\* |
 
 \* [HIP 69](https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md) sets the
-assert location fee to $5 for three months following the Solana migration.  
-\*\* DevAddrs must be purchased in slabs of 8.
+assert location fee to $5 for three months following the Solana migration. \*\* DevAddrs must be
+purchased in slabs of 8.
 
 ### Data Credits and Mobile
 
@@ -130,8 +128,14 @@ acquiring Data Credits.
 
 ### Sphere Data Credit Portal
 
-The [Data Credit Portal](/data-credit-portal) built by [Sphere](https://helium.sphere.engineer)
-allows network users to acquire Data Credits without directly holding cryptocurrency. The tool is
-designed for allocating Data Credits for network users like [LNS operators](/iot/open-lns) or mobile
-[service providers](/mobile/service-providers). The tool provides a clear invoice once transactions
-are complete to simplify accounting.
+The [Data Credit Portal](/data-credit-portal) by [Sphere][sphere] allows network users to acquire
+Data Credits without directly holding cryptocurrency. The tool is designed for allocating Data
+Credits for network users like [LNS operators][open-lns] or mobile [service
+providers][service-providers]. The tool provides a clear invoice once transactions are complete to
+simplify accounting.
+
+[bme]: /helium-tokens/hnt/#data-credits-and-burn-and-mint-economics
+[sphere]: https://sphere.engineer
+[open-lns]: /iot/open-lns
+[service-providers]: /mobile/service-providers
+[hip-69]: https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md
