--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -86,16 +86,18 @@ import OperationCostEstimator from '@site/src/theme/DcCostEstimator'
 In addition to network data transfer, Data Credits are also utilized for certain network-related
 fees.
 
-| Action            | Fee              |
-| ----------------- | ---------------- |
-| Device Onboarding | $40              |
-| Assert Location   | $10 \*           |
-| OUI               | $100             |
-| DevAddr           | $100 ($800) \*\* |
+| Action            | Fee                                     |
+| ----------------- | --------------------------------------- |
+| Device Onboarding | $40                                     |
+| Assert Location   | $10<sup>(</sup>[^1]<sup>)</sup>         |
+| OUI               | $100                                    |
+| DevAddr           | $100 ($800)<sup>(</sup>[^2]<sup>)</sup> |
 
-\* [HIP 69](https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md) sets the
-assert location fee to $5 for three months following the Solana migration. \*\* DevAddrs must be
-purchased in slabs of 8.
+[^1]:
+    [HIP 69][hip-69] sets the assert location fee to $5 for three months following the Solana
+    migration.
+
+[^2]: DevAddrs must be purchased in slabs of 8.
 
 ### Data Credits and Mobile
 
