conform page title and url slugs, with redirects

--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -1,11 +1,11 @@
 ---
 id: hnt-token
 title: The Helium Network Token
-pagination_label: HNT Token
-sidebar_label: HNT Token
+pagination_label: Helium Network Token
+sidebar_label: Helium Network Token
 description: Helium Network Token Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/hnt
+slug: /hnt-token
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
