--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -1,11 +1,11 @@
 ---
 id: data-credit
-title: Helium Data Credits
-pagination_label: Data Credit Token
-sidebar_label: Data Credit Tokens
+title: Data Credit
+pagination_label: Data Credit
+sidebar_label: Data Credit
 description: Helium Data Credit Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/data-credit
+slug: /data-credit
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
