--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -1,11 +1,11 @@
 ---
 id: iot-token
 title: Helium IoT Network Token
-pagination_label: IOT Token
-sidebar_label: IOT Token
+pagination_label: IOT Network Token
+sidebar_label: IOT Network Token
 description: Helium IoT Network Token Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/iot
+slug: /iot-token
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
