--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -1,11 +1,11 @@
 ---
 id: mobile-token
 title: Helium Mobile Network Token
-pagination_label: MOBILE Token
-sidebar_label: MOBILE Token
+pagination_label: MOBILE Network Token
+sidebar_label: MOBILE Network Token
 description: Helium Mobile Network Token Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/mobile
+slug: /mobile-token
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
