--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -73,15 +73,15 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="/blockchain/packet-purchasing">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Packet Purchasing
       </a>
-      <a className="block" href="/helium-tokens/hnt">
+      <a className="block" href="/hnt-token">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Helium Token
         ($HNT)
       </a>
-      <a className="block" href="/helium-tokens/iot">
+      <a className="block" href="/iot-token">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The IOT Network Token
         ($IOT)
       </a>
-      <a className="block" href="/helium-tokens/mobile">
+      <a className="block" href="/mobile-token">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Mobile Network
         Token ($MOBILE)
       </a>
