--- a/docs/faq/data-credits.mdx
+++ b/docs/faq/data-credits.mdx
@@ -13,7 +13,7 @@ slug: /faq/data-credits
 ### What are Data Credits? Do I need them?
 
 If you’re a Hotspot owner, you do not need to worry about holding individual
-[Data Credits](/helium-tokens/hnt#data-credits-and-burn-and-mint-economics).
+[Data Credits](/hnt-token#data-credits-and-burn-and-mint-economics).
 
 Data Credits for Hotspot owners are created on-demand through the implicit burn mechanism and
 [used to pay all Hotspot transaction fees](/blockchain/transaction-fees/#transaction-fees) such as
