--- a/docs/governance/realms.mdx
+++ b/docs/governance/realms.mdx
@@ -36,7 +36,7 @@ You can learn more about Staking on Realms [here.](/vote-escrow/realms)
 
 **On-Chain Fees:** All veToken holders must have SOL in their voting wallet to submit a vote
 transaction. You can access more SOL through many different options. If you are using SOL for the
-first time, check out [this onboarding and swap tool](/helium-tokens/sol-token#swap-utility).
+first time, check out [this onboarding and swap tool](/sol-token#swap-utility).
 
 **Ballot Options:** Proposal vote options will typically be `For` or `Against`.
 
