--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -136,7 +136,7 @@ Credits for network users like [LNS operators][open-lns] or mobile [service
 providers][service-providers]. The tool provides a clear invoice once transactions are complete to
 simplify accounting.
 
-[bme]: /helium-tokens/hnt/#data-credits-and-burn-and-mint-economics
+[bme]: /hnt-token/#data-credits-and-burn-and-mint-economics
 [sphere]: https://sphere.engineer
 [open-lns]: /iot/open-lns
 [service-providers]: /mobile/service-providers
