--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -115,11 +115,11 @@ Review the [complete Net Emissions discussion in the HIP][hip-20] for more infor
 
 [block-93]: https://explorer-old.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw
 [bme]: https://multicoin.capital/2018/02/13/new-models-utility-tokens/
-[datacredit]: /helium-tokens/data-credit
+[datacredit]: /data-credit
 [explorer-stats]: https://explorer.helium.com/stats
 [hip-20]: https://github.com/helium/HIP/blob/master/0020-hnt-max-supply.md#net-emissions
-[iot]: /helium-tokens/iot
-[mobile]: /helium-tokens/mobile
+[iot]: /iot-token
+[mobile]: /mobile-token
 [price-oracles]: /oracles/price-oracles
 [sol-emissions]:
   https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf
