--- a/docs/solana/migration-faq.mdx
+++ b/docs/solana/migration-faq.mdx
@@ -31,7 +31,7 @@ activity and rewards.
 
 Instead of earning HNT, Hotspots will earn IOT rewards for their PoC and data transfer. IOT can be
 swapped for HNT in the Helium Wallet app or on an exchange. Find more info about IOT
-[here](/helium-tokens/IOT).
+[here](/iot-token).
 
 ## How Do I Stake My Tokens?
 
@@ -75,8 +75,7 @@ seconds, and the wallet will be migrated over to Solana.
 This error occurs when a wallet does not have enough SOL to proceed with a transaction. For example,
 a wallet will need approximately 0.02 SOL to stake.
 
-Use the [HNT-SOL Swapping widget](/helium-tokens/sol-token/ in the Helium docs to swap HNT for SOL
-as needed.
+Use the [HNT-SOL Swapping widget](/sol-token) in the Helium docs to swap HNT for SOL as needed.
 
 ## When Do I Get My First Rewards For Delegations?
 
