--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -75,10 +75,10 @@ cooldown will automatically convert to veHNT with a six-month staking release da
 HIP-70. Each validator will receive 375,000 veHNT as a veHNT position for six months with rolling
 lock-up, called "constant lock-up."
 
-**Step 4: Delegation to subDAOs** Decide which subDAO or combination of subDAOs
-([IOT](/helium-tokens/iot) and [MOBILE](/helium-tokens/mobile)) you want to delegate your veHNT to.
-You can have multiple positions of veHNT delegated to different subDAOs or for different lock-up
-periods. Each position of veHNT can delegate all or nothing of the veHNT.
+**Step 4: Delegation to subDAOs** Decide which subDAO or combination of subDAOs ([IOT](/iot-token)
+and [MOBILE](/mobile-token)) you want to delegate your veHNT to. You can have multiple positions of
+veHNT delegated to different subDAOs or for different lock-up periods. Each position of veHNT can
+delegate all or nothing of the veHNT.
 
 Delegation of veHNT can be managed within the [Helium Wallet App](/wallets/helium-wallet-app) using
 Realms.
