--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -741,7 +741,7 @@ With that, your gateways are ready for Load & Capacity runs.
 
 Benchmarking on an **isolated server instance of router** (e.g., `router-dev`) affords the option of
 resetting DC balance of an organization. Otherwise, benchmarking will make a measurable impact to
-your wallet; see [Data Credits](/helium-tokens/data-credit) within Console documentation.
+your wallet; see [Data Credits](/data-credit) within Console documentation.
 
 First, find your `organization_id` which may be obtained via Console UI. From the Organizations
 page, there is an export widget associated with each organization listed.
