--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -45,7 +45,7 @@ Year 1 for IOT started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emission schedule was created in [HIP-52](hip-52-emmisions) and confirmed in
+The emission schedule was created in [HIP-52][hip-52-emmisions] and confirmed in
 [HIP-77][hip-77-emmisions] and is as follows:
 
 | Year | IOT at Year Start | IOT Minted | Proof of Coverage <sup>(</sup>[^3]<sup>)</sup> | Data Transfer <sup>(</sup>[^3]<sup>)</sup> | Oracles <sup>(</sup>[^4]<sup>)</sup> | Operations Fund | veHNT Stakes |
@@ -58,8 +58,8 @@ The emission schedule was created in [HIP-52](hip-52-emmisions) and confirmed in
 | 6    | 167.5B            | 8.125B     | 22.5%                                          | 57.5%                                      | 7%                                   | 7%              | 6%           |
 | 7    | 175.625B          | 8.125B     | 21%                                            | 59%                                        | 7%                                   | 7%              | 6%           |
 
-> Full token emissions can be viewed in the IOT section of the
-> [Token Emissions as of Solana Migration](migration-emissions) document.
+> Full token emissions can be viewed in the IOT section of the [Token Emissions as of Solana
+> Migration][migration-emissions] document.
 
 [^3]: Any IOT not rewarded for data transfer is rolled into Proof of Coverage.
 [^4]: Oracles are not rewarded until additional oracle operators deploy services.
