--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -85,7 +85,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Learn More <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
-      <a className="block" href="/helium-tokens/hnt">
+      <a className="block" href="/hnt-token">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Helium Token
       </a>
       <a className="block" href="/blockchain/mining">
