--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -67,7 +67,7 @@ Learn more about how to get started using Console with our Tips and Tricks video
 ### Admin
 
 - [Users and Organizations](/use-the-network/console/users)
-- [Data Payment](/helium-tokens/data-credit)
+- [Data Payment](/data-credit)
 - [CLI](/use-the-network/console/cli)
 - [API](/use-the-network/console/api)
 - [Account Security and API Keys](/use-the-network/console/my-account)
