--- a/docs/use-the-network/roaming.mdx
+++ b/docs/use-the-network/roaming.mdx
@@ -88,7 +88,7 @@ and hit **Transfer DC to Org**. On the pop up, enter the quantity of Data Credit
 receiving Organization. Click **Make Transfer**.
 
 Further reading: how Data Credits fit into Helium Tokenomics
-[here](/helium-tokens/hnt/#data-credits-and-burn-and-mint-economics).
+[here](/hnt-token/#data-credits-and-burn-and-mint-economics).
 
 ## Configurations
 
