--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -135,7 +135,7 @@ without directly holding cryptocurrency. The tool is designed for allocating Dat
 network users like [LNS operators][open-lns] or mobile [service providers][service-providers]. The
 tool provides a clear invoice once transactions are complete to simplify accounting.
 
-[bme]: /helium-tokens/hnt/#data-credits-and-burn-and-mint-economics
+[bme]: /hnt-token/#data-credits-and-burn-and-mint-economics
 [sphere]: https://sphere.engineer
 [open-lns]: /iot/open-lns
 [service-providers]: /mobile/service-providers
